@@ -11,7 +11,6 @@ Version 0.3
 	 * string freeze
 
 	libotp
-	 * checking for \0\0\0 on decrypt to check if the message is valid 
 	 * keyfile entropy really checked for patterns
 
 	otp
